objects/Attendee__c.object
<CustomObject>
    <description>The recorded list of all the possible attendees for the event.</description>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>The recorded company name of the attendee.</description>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>The recorded email of the attendee.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Location_Address_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The address of the attendee based on Location (Address Book) object.</description>
        <label>Location (Address Book)</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>The recorded phone number of the attendee.</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Location_Address_Book__c</columns>
        <columns>Company_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>